fix input UI on iPhone 6s

--- a/mobile-site/stylesheets/base/_base.scss
+++ b/mobile-site/stylesheets/base/_base.scss
@@ -59,3 +59,7 @@ input[type="checkbox"] {
     background-image: url($base-url + '/main/checkbox_checked.png');
   }
 }
+
+input {
+  -webkit-appearance: none;
+}
